# SpiralAutonomyKernel

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  evolution_plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  evaluation.md  guarantees.md  problem-solution-profit.md  prompts.md
docs/evidence/: README.md  offline-cycle.json  runtime-summary.md  validation.md
examples/: basic_cycle.py
scripts/: build_proof_pack.py  check.sh  check_license_headers.py  run_demo.sh
src/: __init__.py  aiosqlite.py  cli.py  portalocker.py
src/components/: __init__.py  adaptation.py  autonomy_scope.py  base.py  code_mutation.py  constraint_explorer.py  governance.py  improvement_protocol.py  mission_alignment.py  registry.py
src/core/: SYNC_BOUNDARY.md  __init__.py  adaptive_rules.py  async_cpu.py  async_fs.py  autonomous_evolution.py  autonomy.py  autonomy_charter.py  bandit.py  benchmarks.py  cache_store.py  candidates.py  code_intelligence.py  evaluator.py  events.py  evolution.py  experiment_manager.py  impact_ledger.py  improvement_protocol.py  intent_graph.py  kernel.py  llm.py  metrics.py  openai_client.py  policy.py  reflection.py  reports.py  selector.py  spiral_engine.py  state_model.py  state_store.py  (+5 more)
tests/: test_cli.py  test_code_mutation.py  test_evaluator.py  test_experiment_manager.py  test_llm.py  test_policy.py  test_registry.py  test_selector.py  test_spiral_engine.py  test_state_store.py  test_versioning.py
(+16 files in other folders)
