[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral-autonomy-kernel"
version = "1.0.0"
description = "Persistent, policy-bounded self-evolution runtime for LLM-based systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
py-modules = ["aiosqlite", "portalocker", "cli"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spiral-kernel = "sif.cli:main"
sif = "sif.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
